[MODORDERS-434] - Fix issue with received pieces (#375)
* [MODORDERS-434] - Fix issue with received pieces

* [MODORDERS-434] - Fix tests

* [MODORDERS-434] - fix issue with multy locations

* [MODORDERS-434] - Smells fixed

* [MODORDERS-434] - Add test for item update